--- a/app/views/insured/plan_shoppings/thankyou.html.erb
+++ b/app/views/insured/plan_shoppings/thankyou.html.erb
@@ -46,13 +46,13 @@
           <div class="mr-3">
             <% min_aptc = is_ivl_osse_filter_eligible ? minimum_applied_aptc_pct_for_osse : 0 %>
             <% step = is_ivl_osse_filter_eligible ? 1 : 1 %>
-            <% pct = max_credit > 0 ? (@elected_aptc/max_credit).round(2) : 0 %>
+            <% pct = max_credit > 0 ? (@elected_aptc/max_credit).round : 0 %>
             <label for="elected_aptc_pct" class="required"><%= l10n('insured.plan_shoppings.thankyou.percent_applied') %></label>
             <input max="100" min="<%= min_aptc %>" name="elected_aptc_pct" id="elected_aptc_pct" step="<%= step %>" type="number" value="<%= number_with_precision(pct * 100, precision: 0) %>" class="w-100 thankyou">
           </div>
           <div class="mr-3">
             <label for="elected_aptc_value" class="required"><%= l10n('insured.plan_shoppings.thankyou.amount_applied') %></label>
-            <input id="elected_aptc_value" max="<%= max_credit %>" type="number" value="<%= number_with_precision(@elected_aptc, precision: 2) %>" data-elected="<%= number_with_precision(@elected_aptc, precision: 2) %>" class="thankyou">
+            <input id="elected_aptc_value" max="<%= max_credit %>" type="number" value="<%= number_with_precision(max_credit, precision: 2) %>" data-elected="<%= number_with_precision(@elected_aptc, precision: 2) %>" class="thankyou">
           </div>
           <div class="">
             <button id="aptc_submit" class="short"><%= l10n('insured.plan_shoppings.thankyou.update_applied') %></button>
