--- a/components/benefit_sponsors/app/views/benefit_sponsors/profiles/broker_agencies/broker_agency_staff_roles/_new_staff_applicant.html.erb
+++ b/components/benefit_sponsors/app/views/benefit_sponsors/profiles/broker_agencies/broker_agency_staff_roles/_new_staff_applicant.html.erb
@@ -13,7 +13,7 @@
   <%= form_for @staff, as: :staff, url: {action: "create"}, remote: true, html: {class: "needs-ajax-validation s508", id: 'broker_staff_registration_form', novalidate: true} do |f| %>
     <div id="broker_staff"></div>
     <%= render partial: './ui-components/bs4/v1/forms/broker/staff_registration', locals: {f: f} %>
-    <h2 class='mb-3'><%= l10n("broker_agency_info") %></h2>
+    <h2 class='mb-3'><%= l10n("broker_agencies.broker_roles.new_broker_agency_form.broker_agency_information") %></h2>
     <div class="row">
       <div class="col-md-9 col-sm-9 col-xs-12 broker-agency-search">
         <div class="row search-dropdown-wrapper">
