--- a/app/views/ui-components/bs4/v1/forms/broker/_profile_information.html.erb
+++ b/app/views/ui-components/bs4/v1/forms/broker/_profile_information.html.erb
@@ -16,7 +16,7 @@
 <div class="row mb-4">
   <div class="col-md-3">
     <%= f.label :working_hours, 'Available Weekend/Evening Hours?*' %>
-    <%= f.select(:working_hours, options_for_select(BenefitSponsors::Organizations::BrokerAgencyProfile::WORKING_HOURS_AND_ACCEPTING_NEW_CLIENTS_OPTIONS.inject([]) { |options, (k, v)| options << [k, v] }, selected: f.object.try(:working_hours)), { prompt: "Yes / No" }, { class: 'form-control', required: true }) %>
+    <%= f.select(:working_hours, options_for_select(BenefitSponsors::Organizations::BrokerAgencyProfile::YES_NO_OPTIONS.inject([]) { |options, (k, v)| options << [k, v] }, selected: f.object.try(:working_hours)), { prompt: "Yes / No" }, { class: 'form-control', required: true }) %>
     <div class="invalid-feedback">
       Please select an option.
     </div>
@@ -24,7 +24,7 @@
 
   <div class="col-md-3">
     <%= f.label :accept_new_clients, 'Accepting New Clients?*' %>
-    <%= f.select(:accept_new_clients, options_for_select(BenefitSponsors::Organizations::BrokerAgencyProfile::WORKING_HOURS_AND_ACCEPTING_NEW_CLIENTS_OPTIONS.inject([]) { |options, (k, v)| options << [k, v] }, selected: f.object.try(:accept_new_clients)), { prompt: "Yes / No" }, { class: 'form-control', required: true }) %>
+    <%= f.select(:accept_new_clients, options_for_select(BenefitSponsors::Organizations::BrokerAgencyProfile::YES_NO_OPTIONS.inject([]) { |options, (k, v)| options << [k, v] }, selected: f.object.try(:accept_new_clients)), { prompt: "Yes / No" }, { class: 'form-control', required: true }) %>
     <div class="invalid-feedback">
       Please select an option.
     </div>
