--- a/app/views/insured/group_selection/_cancel_plan_form.html.erb
+++ b/app/views/insured/group_selection/_cancel_plan_form.html.erb
@@ -21,7 +21,7 @@
         <%= hidden_field_tag :bs4, true %>
         <p><%= l10n("choose_last_day") %></p>
         <label class="required" for="term_date"><%= l10n("coverage_end_date") %></label>
-        <%= date_field_tag :term_date, nil,{class: "date-field mt-2", min: TimeKeeper.date_of_record.strftime("%Y-%m-%d"), required: true} %>
+        <%= date_field_tag :term_date, class: "date-field mt-2", :'data-date-max' => "+0", required: true %>
         <% if show_cancellation_reason %>
           <p class="mt-4"><%= l10n("why_are_you_canceling") %><p>
           <label class="required" for="cancellation_reason"><%= l10n("cancelation_reason") %></label>
