reenable removal of address from edit broker

--- a/components/benefit_sponsors/app/views/benefit_sponsors/profiles/registrations/_broker_agency_form.html.erb
+++ b/components/benefit_sponsors/app/views/benefit_sponsors/profiles/registrations/_broker_agency_form.html.erb
@@ -44,6 +44,10 @@
   </script>
 
 <% else %>
+  <% content_for :head do %>
+    <%= javascript_pack_tag 'benefit_sponsors', 'data-turbolinks-track': 'reload' %>
+  <% end %>
+
   <div class="profile-content top-pd">
     <div class="tab-row">
       <div class="tab-content" id="myTabContent">
