add more unique translations

--- a/app/views/ui-components/bs4/v1/forms/broker/_attestation_agreement_fields.html.erb
+++ b/app/views/ui-components/bs4/v1/forms/broker/_attestation_agreement_fields.html.erb
@@ -1,4 +1,4 @@
-<h2 class='mb-4'>Agreements</h2>
+<h2 class='mb-3'><%= l10n("agreements") %></h2>
 
 <div class="form-group mb-3">
   <%= check_box_tag :all_marketplace_required_trainings, nil, false, class: "broker-attestation-field", onChange: "allowBrokerAgencyFormSubmission()" %>
