--- a/app/views/ui-components/bs4/v1/forms/broker/_agency_information.html.erb
+++ b/app/views/ui-components/bs4/v1/forms/broker/_agency_information.html.erb
@@ -4,15 +4,15 @@
   <%= f.hidden_field :entity_kind, value: "s_corporation" %>
   
   <div class="col-md-6">
-    <label for="inputLegalName">Legal Name *</label>
-    <%= f.text_field :legal_name, placeholder: 'Agency Legal Name', required: true, id: 'validationCustomLegalName', class: 'form-control' %>
+    <label for="inputLegalName"><%= l10n('legal_name') %> *</label>
+    <%= f.text_field :legal_name, placeholder: l10n('legal_name_placeholder'), required: true, id: 'validationCustomLegalName', class: 'form-control' %>
     <div class="invalid-feedback">
-      Please provide a legal name.
+      <%= l10n('legal_name_error') %>
     </div>
   </div>
 
   <div class="col-md-6">
-    <label for="inputDBA">DBA</label>
-    <%= f.text_field :dba, placeholder: 'Doing Business As', id: 'validationCustomdba', class: 'form-control' %>
+    <label for="inputDBA"><%= l10n('dba_caps') %></label>
+    <%= f.text_field :dba, placeholder: l10n('doing_business_as'), id: 'validationCustomdba', class: 'form-control' %>
   </div>
 </div>
