--- a/app/views/ui-components/bs4/v1/forms/broker/contact_information/_address.html.erb
+++ b/app/views/ui-components/bs4/v1/forms/broker/contact_information/_address.html.erb
@@ -5,42 +5,42 @@
 <div id="address_info">
   <div class="row mb-2">
     <div class="col-md-6 col-sm-6 col-xs-12">
-      <label for="inputAddress1"><%= l10n('employers.registration.address') %></label>
+      <label for="inputAddress1"><%= l10n('address_1') %> *</label>
       <%= f.text_field :address_1, class: "form-control mb-1", placeholder: "123 Main St", required: true, id: 'inputAddress1' %>
       <div class="invalid-feedback">
         Please provide a valid address.
       </div>
     </div>
     <div class="col-md-6 col-sm-6 col-xs-12">
-      <label for="inputAddress2">Address Line 2</label>
+      <label for="inputAddress2"><%= l10n('address_2') %></label>
       <%= f.text_field :address_2, class: "form-control mb-1", placeholder: "Unit 3A" %>
     </div>
   </div>
 
   <div class="row mb-2" data-controller="zip-check">
     <div class="col-md-3 col-sm-12 col-xs-12">
-      <label for="inputCity"><%= l10n("employers.registration.city") %></label>
-      <%= f.text_field :city, class: "form-control mb-1", required: true, placeholder: 'City' %>
+      <label for="inputCity"><%= l10n("city") %> *</label>
+      <%= f.text_field :city, class: "form-control mb-1", required: true, placeholder: l10n("city") %>
       <div class="invalid-feedback">
         Please provide a valid city.
       </div>
     </div>
     <div class="col-md-3 col-sm-12 col-xs-12">
-      <label for="inputState"><%= l10n('employers.registration.state') %></label>
-      <%= f.select :state, options_for_select(State::NAME_IDS.map(&:last).sort_by { |c| c }, selected: f.object.try(:state)), { include_blank: 'Select State' }, class: 'form-control mb-1', id: 'inputState', required: true %>
+      <label for="inputState"><%= l10n('state') %> *</label>
+      <%= f.select :state, options_for_select(State::NAME_IDS.map(&:last).sort_by { |c| c }, selected: f.object.try(:state)), { include_blank: l10n("select_state") }, class: 'form-control mb-1', id: 'inputState', required: true %>
       <div class="invalid-feedback">
         Please select a state.
       </div>
     </div>
     <div class="col-md-3 col-sm-12 col-xs-12">
-      <label for="inputZip"><%= l10n('employers.registration.zip') %></label>
+      <label for="inputZip"><%= l10n('zip_code') %> *</label>
       <%= f.text_field :zip, id: 'inputZip', class: 'form-control mb-1', minlength: '5', maxlength: '5', required: true, placeholder: '00000' %>
       <div class="invalid-feedback">
         Please provide a valid zipcode.
       </div>
     </div>
     <div class="col-md-3 col-sm-6 col-xs-12">
-      <label for="inputKind"><%= l10n('employers.registration.kind') %></label>
+      <label for="inputKind"><%= l10n('address_kind') %> *</label>
       <% kinds = f.object.office_kind_options; kinds = kinds.rotate if params[:child_index] %>
       <%= f.select :kind, options_for_select(kinds.map { |a| [a.to_s.humanize, a.to_s] }, selected: f.object.try(:kind)), { prompt: "Select Address Kind" }, class: "form-control", required: true, id: 'kindSelect' %>
       <div class="invalid-feedback">
