--- a/app/views/ui-components/bs4/v1/forms/broker/contact_information/_contact_info_fields.html.erb
+++ b/app/views/ui-components/bs4/v1/forms/broker/contact_information/_contact_info_fields.html.erb
@@ -15,7 +15,7 @@
     <% end %>
   </div>
 
-  <a class="btn btn-default btn-secondary mb-5" type="button" data-action="click->office-locations#addLocation">Add Office Location</a>
+  <a class="btn btn-default btn-secondary mb-4" type="button" data-action="click->office-locations#addLocation"><%= l10n("add_office_location") %></a>
 </div>
 
 <script>
