--- a/app/views/ui-components/bs4/v1/forms/broker/contact_information/_phone.html.erb
+++ b/app/views/ui-components/bs4/v1/forms/broker/contact_information/_phone.html.erb
@@ -1,7 +1,7 @@
 <div class="row">
   <%= f.hidden_field :kind, value: 'work', id: "phoneType" %>
   <div class="col-md-3 mb-3">
-    <label for="inputNumber">Phone Number *</label>
+    <label for="inputNumber"><%= l10n('phone_number') %> *</label>
     <%= f.text_field :full_number_without_extension, 
       placeholder: "(000) 000-0000",
       required: true, id: 'inputNumber', 
