--- a/app/views/shared/_me_carrier_contact_information.html.erb
+++ b/app/views/shared/_me_carrier_contact_information.html.erb
@@ -21,34 +21,34 @@
               <div>
                 <p class="bold mb-0"><%=l10n("plans.cho")%></p>
                 <p class="mb-0"><%=l10n("plans.cho_hours")%></p>
-                <p class="mb-0"><%=l10n("plans.call")%>: <a href=<%=l10n("plans.cho_href_phone")%> ><%=l10n("plans.cho_phone")%></a></p>
+                <p class="mb-0"><%=l10n("plans.call")%> <a href=<%=l10n("plans.cho_href_phone")%> ><%=l10n("plans.cho_phone")%></a></p>
                 <p><%=l10n("plans.cho_contact_url")%></p>
               </div>
             <% when "Anthem Blue Cross and Blue Shield" %>
               <div>
                 <p class="bold mb-0"><%=l10n("plans.anthm")%></p>
                 <p class="mb-0"><%=l10n("plans.anthm_hours")%></p>
-                <p class="mb-0"><%=l10n("plans.call")%>: <a href=<%=l10n("plans.anthm_href_phone")%> ><%=l10n("plans.anthm_phone")%></a></p>
+                <p class="mb-0"><%=l10n("plans.call")%> <a href=<%=l10n("plans.anthm_href_phone")%> ><%=l10n("plans.anthm_phone")%></a></p>
                 <p><%=l10n("plans.anthm_contact_url")%></p>
               </div>
             <% when "Taro Health" %>
               <div>
                 <p class="bold mb-0"><%=l10n("plans.taro")%></p>
                 <p class="mb-0"><%=l10n("plans.taro_hours")%></p>
-                <p class="mb-0"><%=l10n("plans.call")%>: <a href=<%=l10n("plans.taro_href_phone_1")%> ><%=l10n("plans.taro_phone_1")%></a></p>
+                <p class="mb-0"><%=l10n("plans.call")%> <a href=<%=l10n("plans.taro_href_phone_1")%> ><%=l10n("plans.taro_phone_1")%></a></p>
                 <p><%=l10n("plans.taro_contact_url")%></p>
               </div>
             <% when "Harvard Pilgrim Health Care" %>
               <div>
                 <p class="bold mb-0"><%=l10n("plans.hphc")%></p>
                 <p class="mb-0"><%=l10n("plans.hphc_hours")%></p>
-                <p><%=l10n("plans.call")%>: <a href=<%=l10n("plans.hphc_href_phone")%> ><%=l10n("plans.hphc_phone")%></a></p>
+                <p><%=l10n("plans.call")%> <a href=<%=l10n("plans.hphc_href_phone")%> ><%=l10n("plans.hphc_phone")%></a></p>
               </div>
             <% when "Northeast Delta Dental" %>
               <div>
                 <p class="bold mb-0"><%=l10n("plans.nedd")%></p>
                 <p class="mb-0"><%=l10n("plans.nedd_hours")%></p>
-                <p class="mb-0"><%=l10n("plans.call")%></>
+                <p class="mb-0"><%=l10n("plans.call")%></p>
                 <a href=<%=l10n("plans.nedd_href_phone_1")%> ><%=l10n("plans.nedd_phone_1")%></a><br>
                 <a href=<%=l10n("plans.nedd_href_phone_2")%> ><%=l10n("plans.nedd_phone_2")%></a>
                 <p><%=l10n("plans.nedd_contact_url")%></p>
