--- a/app/javascript/css/colors.scss
+++ b/app/javascript/css/colors.scss
@@ -104,6 +104,9 @@
   --button-default-hover-color: var(--primary-hover-color);
   --button-default-active-color: var(--primary-color-darker);
 
+  --button-outline-hover-bg: #e2e9ee;
+  --button-outline-active-bg: #cedae3;
+
   --enrollment-status-red: #a21e1f;
   --enrollment-status-green: #027314;
   --enrollment-status-yellow: #e5a900;
