handle message deletion in bs4 for brokers

--- a/components/benefit_sponsors/app/views/benefit_sponsors/inboxes/messages/destroy.js.erb
+++ b/components/benefit_sponsors/app/views/benefit_sponsors/inboxes/messages/destroy.js.erb
@@ -1,5 +1,10 @@
 $("#inbox_form, #message_list_form").hide();
 $('#inbox-messages').show().html("<%= escape_javascript(render "benefit_sponsors/shared/inboxes/message_list", provider: @inbox_provider) %>");
-<% if @inbox_provider != current_user.person%>
-location.reload();
-<% end %>
+var bs4 = document.documentElement.dataset.bs4 == "true";
+if (bs4) {
+  $("#messageDeleted").removeClass("hidden");
+} else {
+  <% if @inbox_provider != current_user.person%>
+    location.reload();
+  <% end %>
+}
