--- a/components/benefit_sponsors/app/views/benefit_sponsors/shared/inboxes/_individual_message.html.erb
+++ b/components/benefit_sponsors/app/views/benefit_sponsors/shared/inboxes/_individual_message.html.erb
@@ -1,3 +1,31 @@
+<% if @bs4 %>
+  <tr
+    class='msg-inbox <%= message.message_read==true ? "msg-inbox-read" : "msg-inbox-unread" %>'
+    data-url="<%= retrieve_show_path(provider, message) %>">
+
+    <td tabindex="0" class="sender">
+      <div><%= message.try(:from) if @folder == "Inbox" || @folder == "Deleted" %></div>
+      <div><%= message.try(:to) if @folder == "Send" %></div>
+    </td>
+
+    <td>
+      <%= message.try(:subject) %>
+    </td>
+
+    <td>
+      <%= message.created_at.in_time_zone("Eastern Time (US & Canada)").strftime("%m/%d/%Y at %H:%M %Z") %>
+    </td>
+
+    <% unless @folder == 'Deleted' %>
+      <td data-msg-delete class="pl-4 <%=pundit_class(Family, :updateable?)%>">
+        <i tabindex="0" aria-hidden="true" class="far fa-trash-alt fa-2x delete-icon <%=pundit_class Family, :updateable?%>" data-toggle="tooltip">
+          <span class="hide"><%= l10n("Delete") %></span>
+        </i>
+      </td>
+    <% end %>
+  </tr>
+
+<% else %>
 <tr class='<%=message.message_read==true ? "msg-inbox-read" : "msg-inbox-unread"%>' onclick="showMessage('<%= retrieve_show(provider, message) %>');">
   <td>
     <%= message.try(:from) if @folder == 'Inbox' %>
@@ -17,6 +45,7 @@
   <% end %>
   </td>
 </tr>
+<% end %>
 <script>
   function showMessage(url) {
     $.ajax({type: "GET", url: url, dataType: 'script'});
