--- a/components/benefit_sponsors/app/views/benefit_sponsors/shared/inboxes/_message_list.html.erb
+++ b/components/benefit_sponsors/app/views/benefit_sponsors/shared/inboxes/_message_list.html.erb
@@ -1,4 +1,24 @@
 <% if @bs4 %>
+<div class="hidden mb-4" id="messageDeleted">
+  <div class="alert alert-info d-flex align-items-start">
+    <div class="d-flex pl-1">
+      <div class="info-icon icon" alt="info">&nbsp;</div>
+    </div>
+    <div class="col mr-auto p-0 align-self-center">
+      Successfully deleted message.
+    </div>
+    <div class="d-flex pl-1">
+      <span class="close-icon icon icon-sm pr-1" alt="Close" href="javascript;">&nbsp;<span class="sr-only">Close</span></span>
+    </div>
+  </div>
+</div>
+
+<script>
+  $(".close-icon").on('click', function() {
+    $("#messageDeleted").addClass("hidden");
+  });
+</script>
+
 <% @folder = (params[:folder] || 'Inbox').capitalize %>
 <% sorted_inbox_messages = provider.inbox.messages.select{|m| @folder == (m.folder.try(:capitalize) || 'Inbox') }.sort_by(&:created_at).reverse %>
 <div id="inbox-messages" class="mx-0 px-0">
