--- a/components/benefit_sponsors/app/views/benefit_sponsors/shared/inboxes/_message_list.html.erb
+++ b/components/benefit_sponsors/app/views/benefit_sponsors/shared/inboxes/_message_list.html.erb
@@ -5,7 +5,7 @@
       <div class="info-icon icon" alt="info">&nbsp;</div>
     </div>
     <div class="col mr-auto p-0 align-self-center">
-      Successfully deleted message.
+      <%= l10n("broker_agencies.message_deleted") %>
     </div>
     <div class="d-flex pl-1">
       <span class="close-icon icon icon-sm pr-1" alt="Close" href="javascript;">&nbsp;<span class="sr-only">Close</span></span>
