add translations and update w/feedback from comments

--- a/app/views/datatables/_drop_enrollment_member.html.erb
+++ b/app/views/datatables/_drop_enrollment_member.html.erb
@@ -9,6 +9,8 @@
   });
 </script>
 
+<%= javascript_pack_tag 'effective_table_add_ons' if EnrollRegistry.feature_enabled?(:mask_ssn_ui_fields) %>
+
 <td colspan="90%">
   <% if @hbxs.present? %>
     <% @hbxs.each do |hbx|%>
