--- a/components/benefit_sponsors/app/views/benefit_sponsors/profiles/broker_agencies/broker_agency_profiles/_families.html.erb
+++ b/components/benefit_sponsors/app/views/benefit_sponsors/profiles/broker_agencies/broker_agency_profiles/_families.html.erb
@@ -10,7 +10,9 @@
       <thead>
       <tr>
         <th><%= l10n("name")%></th>
-        <th><%= l10n("ssn")%></th>
+        <% unless EnrollRegistry.feature_enabled?(:mask_ssn_ui_fields) %>
+          <th><%= l10n("ssn")%></th>
+        <% end %>
         <th><%= l10n("dob")%></th>
         <th><%= l10n("hbx_id")%></th>
         <th><%= l10n("family")%></th>
@@ -26,15 +28,20 @@
     </table>
     </div>
     <script type="text/javascript" charset="utf-8">
-
+      var ssnRemoved = "<%= EnrollRegistry.feature_enabled?(:mask_ssn_ui_fields) %>";
+      if (ssnRemoved) {
         var columnList = [{ data: 'name'}, { data: 'ssn' }, { data: 'dob' }, { data: 'hbx_id'}, { data: 'family_count'}, { data: 'registered'}];
-        var market_enabled = document.getElementById("market_enabled_check").value;
-        if (market_enabled == 'true') {
-          columnList.push({data: 'consumer'}, {data: 'employee'})
-          var filteredColumnList = columnList
-        } else {
-          var filteredColumnList = columnList
-        }
+      } else {
+        var columnList = [{ data: 'name'}, { data: 'dob' }, { data: 'hbx_id'}, { data: 'family_count'}, { data: 'registered'}];
+      }
+
+      var market_enabled = document.getElementById("market_enabled_check").value;
+      if (market_enabled == 'true') {
+        columnList.push({data: 'consumer'}, {data: 'employee'})
+        var filteredColumnList = columnList
+      } else {
+        var filteredColumnList = columnList
+      }
 
       // datatables setup
       $(document).ready(function() {
@@ -86,6 +93,9 @@
         <thead>
         <tr>
           <th><%= l10n("name")%></th>
+          <% unless EnrollRegistry.feature_enabled?(:mask_ssn_ui_fields) %>
+            <th><%= l10n("ssn")%></th>
+          <% end %>
           <th><%= l10n("dob")%></th>
           <th><%= l10n("hbx_id")%></th>
           <th><%= l10n("family")%></th>
@@ -102,15 +112,19 @@
     </div>
 
     <script type="text/javascript" charset="utf-8">
-
+      var ssnRemoved = "<%= EnrollRegistry.feature_enabled?(:mask_ssn_ui_fields) %>";
+      if (ssnRemoved) {
+        var columnList = [{ data: 'name'}, { data: 'ssn' }, { data: 'dob' }, { data: 'hbx_id'}, { data: 'family_count'}, { data: 'registered'}];
+      } else {
         var columnList = [{ data: 'name'}, { data: 'dob' }, { data: 'hbx_id'}, { data: 'family_count'}, { data: 'registered'}];
-        var market_enabled = document.getElementById("market_enabled_check").value;
-        if (market_enabled == 'true') {
-          columnList.push({data: 'consumer'}, {data: 'employee'})
-          var filteredColumnList = columnList
-        } else {
-          var filteredColumnList = columnList
-        }
+      }
+      var market_enabled = document.getElementById("market_enabled_check").value;
+      if (market_enabled == 'true') {
+        columnList.push({data: 'consumer'}, {data: 'employee'})
+        var filteredColumnList = columnList
+      } else {
+        var filteredColumnList = columnList
+      }
 
       // datatables setup
       $(document).ready(function() {
