--- a/app/views/exchanges/hbx_profiles/_edit_enrollment.html.erb
+++ b/app/views/exchanges/hbx_profiles/_edit_enrollment.html.erb
@@ -13,7 +13,7 @@
         <h3 class="title">Edit DOB / SSN</h3>
         <div class="col-md-12 no-pd col-sm-12 col-xs-12">
           <div class="col-md-3 col-md-offset-3 col-sm-3 col-md-offset-3 col-xs-12 form-group form-group-lg no-pd">
-            New DOB
+            <%= l10n('new_dob') %>
             <%= datepicker_control f, :dob, {:class => "interaction-field-control-census-employee-dob input_txt",
               :value => params[:new_dob].present? ? Date.strptime(params[:new_dob], '%m/%d/%Y') : @person.dob, :placeholder => "DATE OF BIRTH", :'data-date-min' => "-110y", :'data-date-max' => "+0",
               required: true, :onchange => "check_dob_change_implication('#{@person.id}', this.value, '#{@element_to_replace_id}')"}%>
@@ -24,7 +24,7 @@
                 locals: { f: f, presenter: organize_ssn_params(f.object) }
               %>
             <% else %>
-              New SSN
+              <%= l10n('new_ssn') %>
               <% if EnrollRegistry.feature_enabled?(:ssn_ui_validation) %>
                 <%= f.text_field :ssn, placeholder: "#{l10n("social_security").to_s.upcase}", class: "required mask-ssn input_txt",
                   pattern: "(?!666|000|9\\d{2})\\d{3}[\\- ]{0,1}(?!00)\\d{2}[\\- ]{0,1}(?!0{4})\\d{4}", oninvalid: "this.setCustomValidity('Invalid Social Security number.')", oninput: "this.setCustomValidity('')",
