--- a/app/views/hbx_admin/_demographics_info.html.erb
+++ b/app/views/hbx_admin/_demographics_info.html.erb
@@ -1,3 +1,5 @@
+<%= javascript_pack_tag 'effective_table_add_ons' if EnrollRegistry.feature_enabled?(:mask_ssn_ui_fields) %>
+
 <div>
   <table class="table table-border">
     <thead>
@@ -10,16 +12,17 @@
       <tr>
         <td><%=@person.hbx_id%></td> 
         <td><%=@person.full_name%></td>
+        <td><%=@person.full_name%></td>
+        <td><%=@person.dob%></td>
         <td>
           <% if EnrollRegistry.feature_enabled?(:mask_ssn_ui_fields) %>
             <%= render partial: 'shared/person/admin_ssn_block',
               locals: { presenter: organize_ssn_params(@person, @family.id), include_label: false }
             %>
           <% else %>
-            <%=@person.dob%>
+            <%=@person.ssn%>
           <% end %>
         </td>
-        <td><%=@person.ssn%></td>
       </tr>
     </tbody>
   </table>
