--- a/components/benefit_sponsors/app/views/benefit_sponsors/profiles/broker_agencies/broker_agency_profiles/_family_datatable_entry.json.erb
+++ b/components/benefit_sponsors/app/views/benefit_sponsors/profiles/broker_agencies/broker_agency_profiles/_family_datatable_entry.json.erb
@@ -1,10 +1,24 @@
 <% pp = @primary_member_cache[family_datatable_entry.primary_family_member.person_id] %>
-{
-  "name": <%= raw (@display_family_link ? (link_to_with_noopener_noreferrer(pp.full_name, main_app.resume_enrollment_exchanges_agents_path(person_id: pp.id))) : pp.full_name).to_json %>,
-  "dob" : <%= raw format_date(pp.dob).to_json %>,
-  "hbx_id": <%= raw pp.hbx_id.to_json %>,
-  "family_count" : <%= raw family_datatable_entry.active_family_members.size.to_json %>,
-  "registered" : <%= raw (pp.user_id.blank? ? "No" : "Yes").to_json %>,
-  "consumer" : <%= raw (pp.consumer_role.present?  ? "Yes" : "No").to_json %>,
-  "employee" : <%= raw (pp.active_employee_roles.present?  ? "Yes" : "No").to_json %>
-}
+
+<% if EnrollRegistry.feature_enabled?(:mask_ssn_ui_fields) %>
+  {
+    "name": <%= raw (@display_family_link ? (link_to_with_noopener_noreferrer(pp.full_name, main_app.resume_enrollment_exchanges_agents_path(person_id: pp.id))) : pp.full_name).to_json %>,
+    "dob" : <%= raw format_date(pp.dob).to_json %>,
+    "hbx_id": <%= raw pp.hbx_id.to_json %>,
+    "family_count" : <%= raw family_datatable_entry.active_family_members.size.to_json %>,
+    "registered" : <%= raw (pp.user_id.blank? ? "No" : "Yes").to_json %>,
+    "consumer" : <%= raw (pp.consumer_role.present?  ? "Yes" : "No").to_json %>,
+    "employee" : <%= raw (pp.active_employee_roles.present?  ? "Yes" : "No").to_json %>
+  }
+<% else %>
+  {
+    "name": <%= raw (@display_family_link ? (link_to_with_noopener_noreferrer(pp.full_name, main_app.resume_enrollment_exchanges_agents_path(person_id: pp.id))) : pp.full_name).to_json %>,
+    "ssn": <%= raw (begin; number_to_obscured_ssn(pp.ssn); rescue; end).to_json %>,
+    "dob" : <%= raw format_date(pp.dob).to_json %>,
+    "hbx_id": <%= raw pp.hbx_id.to_json %>,
+    "family_count" : <%= raw family_datatable_entry.active_family_members.size.to_json %>,
+    "registered" : <%= raw (pp.user_id.blank? ? "No" : "Yes").to_json %>,
+    "consumer" : <%= raw (pp.consumer_role.present?  ? "Yes" : "No").to_json %>,
+    "employee" : <%= raw (pp.active_employee_roles.present?  ? "Yes" : "No").to_json %>
+  }
+<% end %>
