--- a/components/benefit_sponsors/app/views/benefit_sponsors/profiles/registrations/_broker_registration_form.html.erb
+++ b/components/benefit_sponsors/app/views/benefit_sponsors/profiles/registrations/_broker_registration_form.html.erb
@@ -1,38 +1,36 @@
 <% if @bs4 %>
-  <div class="broker-registration-container p-2">
-    <h1 class="heading-text"><%= l10n("broker_registration") %></h1>
+  <div class="broker-registration-container">
+    <h1 class="mb-4 bold"><%= l10n("broker_registration") %></h1>
     <%= form_for @agency, as: :agency, url: {action: "create"}, html: {class: "needs-validation s508", id: 'broker_registration_form', novalidate: true} do |f| %>
       <%= f.hidden_field :profile_type, value: "broker_agency" %>
       <%= render 'shared/error_messages', object: @agency %>
       <%= f.fields_for :staff_roles, f.object.staff_roles, errors: {}, fieldset: false do |f| %>
-        <%= render partial: './ui-components/v1/forms/broker_registration/personal_information', locals: {f: f} %>
+        <%= render partial: './ui-components/bs4/v1/forms/broker/personal_information', locals: {f: f, npn_disabled: false} %>
       <% end %>
       <%= f.fields_for :organization, f.object.organization, errors: {}, field_set: false do |f| %>
-        <fieldset>
-          <legend><%= l10n("broker_agency_information") %></legend>
-          <%= render partial: './ui-components/v1/forms/broker_registration/broker_agency_information', locals: {f: f} %>
-          <%= f.fields_for :profile, f.object.profile, errors: {}, fieldset: false do |f| %>
-            <%= render partial: './ui-components/v1/forms/broker_registration/broker_profile_information', locals: {f: f} %>
-            <% if (aca_broker_routing_information && @agency.profile_type == "broker_agency") %>
-              <%= render partial: "benefit_sponsors/shared/profiles/broker_agency/bank_information", locals: {f: f} %>
-            <% end %>
-            <%= render partial: './ui-components/v1/forms/office_locations/office_location_fields', locals: {f: f} %>
-            <% if EnrollRegistry.feature_enabled?(:broker_attestation_fields) %>
-              <%= render partial: './ui-components/v1/forms/broker_registration/broker_attestation_agreement_fields' %>
-            <% end %>
-            <% if (aca_broker_routing_information && @agency.profile_type == "broker_agency") %>
-              <h5 class="heading-text">
-                <%= l10n("broker_agencies.broker_roles.broker_registration_text", site_short_name: site_short_name, site_brokers_agreement_path: site_brokers_agreement_path) %>
-              </h5>
-            <% end %>
+        <legend class='beta mb-3'><%= l10n("broker_agencies.broker_roles.new_broker_agency_form.broker_agency_information") %></legend>
+        <%= render partial: './ui-components/bs4/v1/forms/broker/agency_information', locals: {f: f} %>
+        <%= f.fields_for :profile, f.object.profile, errors: {}, fieldset: false do |f| %>
+          <%= render partial: './ui-components/bs4/v1/forms/broker/profile_information', locals: { f: f } %>
+          <%= render partial: './ui-components/bs4/v1/forms/broker/select_language', locals: { f: f } %>
+          <% if (aca_broker_routing_information && @agency.profile_type == "broker_agency") %>
+            <%= render partial: "benefit_sponsors/shared/profiles/broker_agency/bank_information", locals: {f: f} %>
           <% end %>
-        </fieldset>
+          <%= render partial: './ui-components/bs4/v1/forms/broker/contact_information/contact_info_fields', locals: { f: f, registration: true } %>
+          <% if EnrollRegistry.feature_enabled?(:broker_attestation_fields) %>
+            <%= render partial: './ui-components/bs4/v1/forms/broker/attestation_agreement_fields' %>
+          <% end %>
+          <% if (aca_broker_routing_information && @agency.profile_type == "broker_agency") %>
+            <h5 class="heading-text">
+              <%= l10n("broker_agencies.broker_roles.broker_registration_text", site_short_name: site_short_name, site_brokers_agreement_path: site_brokers_agreement_path) %>
+            </h5>
+          <% end %>
+        <% end %>
       <% end %>
       <% if registration_recaptcha_enabled?(@profile_type) %>
         <%= recaptcha_tags %>
       <% end %>
-      <br>
-      <%= f.submit 'CREATE BROKER AGENCY', class: 'btn btn-primary float-right', id: 'broker-btn', disabled: EnrollRegistry.feature_enabled?(:broker_attestation_fields) %>
+      <%= f.submit l10n('new_broker_agency_form.create_broker_agency'), class: 'btn btn-primary', id: 'broker-btn', disabled: EnrollRegistry.feature_enabled?(:broker_attestation_fields) %>
     <% end %>
   </div>
 <% else %>
