--- a/app/views/ui-components/bs4/v1/forms/broker/_personal_information.html.erb
+++ b/app/views/ui-components/bs4/v1/forms/broker/_personal_information.html.erb
@@ -4,7 +4,7 @@
 
 <div class="row mb-3">
   <div class="col-md-6 mb-3">
-    <label for="inputFirstname"><%= l10n('first_name') %> *</label>
+    <label for="inputFirstname"  class="required"><%= l10n('first_name') %></label>
     <%= f.text_field :first_name, placeholder: l10n('first_name'), required: 'true', id: 'inputFirstname', class: 'form-control' %>
     <div class="invalid-feedback">
       <%= l10n("invalid_first_name") %>
@@ -12,7 +12,7 @@
   </div>
 
   <div class="col-md-6 mb-3">
-    <label for="inputLastname"><%= l10n('last_name') %> *</label>
+    <label for="inputLastname"  class="required"><%= l10n('last_name') %></label>
     <%= f.text_field :last_name, placeholder: l10n('last_name'), required: 'true', id: 'inputLastname', class: 'form-control' %>
     <div class="invalid-feedback">
       <%= l10n("invalid_last_name") %>
@@ -20,7 +20,7 @@
   </div>
 
   <div class="col-md-3 mb-3">
-    <label for="inputEmail"><%= l10n('email_address') %> *</label>
+    <label for="inputEmail"  class="required"><%= l10n('email_address') %></label>
     <%= f.email_field :email, placeholder: l10n('placeholder_email'), required: 'true', id: 'inputEmail', class: 'form-control' %>
     <div class="invalid-feedback">
       <%= l10n("invalid_email") %>
@@ -28,7 +28,7 @@
   </div>
 
   <div class="col-md-3 mb-3">
-    <label for="inputDOB"><%= l10n('broker_agencies.dob') %> *</label>
+    <label for="inputDOB"  class="required"><%= l10n('broker_agencies.dob') %></label>
     <%= f.date_field :dob, placeholder: l10n('dob_format'), min: 110.years.ago, max:"9999-12-31", required: true, onblur: 'validDob(this)' %>
     <div class="invalid-feedback">
       <%= l10n("invalid_dob") %>
@@ -36,7 +36,7 @@
   </div>
 
   <div class="col-md-3 mb-3">
-    <label for="inputNPN"><%= l10n('npn') %> *</label>
+    <label for="inputNPN"  class="required"><%= l10n('npn') %></label>
     <%= f.text_field :npn, 
       placeholder: l10n('npn_placeholder'),
       required: %w[new create].include?(controller.action_name) ? 'true' : !EnrollRegistry.feature_enabled?(:allow_alphanumeric_npn), 
