--- a/app/views/ui-components/bs4/v1/forms/broker/_profile_information.html.erb
+++ b/app/views/ui-components/bs4/v1/forms/broker/_profile_information.html.erb
@@ -1,6 +1,6 @@
 <div class="row mb-3">
   <div class="col-md-6">
-    <label for="inputPracticeArea"><%= l10n("marked_kind") %> *</label>
+    <label class="required" for="inputPracticeArea"><%= l10n("marked_kind") %></label>
     <%= f.select(:market_kind, options_for_select(BenefitSponsors::Organizations::BrokerAgencyProfile::MARKET_KINDS_OPTIONS.inject([]) { |options, (k, v)| options << [k, v] }, selected: f.object.try(:market_kind)), { prompt: "Select Market Kind" }, { class: 'form-control', required: true }) %>
     <div class="invalid-feedback">
       <%= l10n("marked_kind_error") %>
@@ -15,7 +15,7 @@
 
 <div class="row mb-4">
   <div class="col-md-3">
-    <%= f.label :working_hours, "#{l10n("available_working_hours?")}*"%>
+    <%= f.label :working_hours, "#{l10n("available_working_hours?")}", class: 'required' %>
     <%= f.select(:working_hours, options_for_select([[l10n('yes'), true], [l10n('no'), false]], selected: f.object.try(:working_hours)), { prompt: l10n("default_yes_no") }, { class: 'form-control', required: true }) %>
     <div class="invalid-feedback">
       <%= l10n("default_select_error") %>
@@ -23,7 +23,7 @@
   </div>
 
   <div class="col-md-3">
-    <%= f.label :accept_new_clients, "#{l10n("accepting_new_clients?")}*"%>
+    <%= f.label :accept_new_clients, "#{l10n("accepting_new_clients?")}", class: 'required' %>
     <%= f.select(:accept_new_clients, options_for_select([[l10n('yes'), true], [l10n('no'), false]], selected: f.object.try(:accept_new_clients)), { prompt: l10n("default_yes_no") }, { class: 'form-control', required: true }) %>
     <div class="invalid-feedback">
       <%= l10n("default_select_error") %>
