--- a/app/views/ui-components/bs4/v1/forms/broker/_staff_registration.html.erb
+++ b/app/views/ui-components/bs4/v1/forms/broker/_staff_registration.html.erb
@@ -2,28 +2,28 @@
 <legend class='beta bold mb-3'><%= l10n("personal_information") %></legend>
 <div class="row mb-4">
   <div class="col-md-3 mb-2">
-    <label for="inputFirstname"><%= l10n('first_name') %> *</label>
+    <label for="inputFirstname" class='required'><%= l10n('first_name') %></label>
     <%= f.text_field :first_name, placeholder: l10n('first_name'), required: 'true', id: 'inputFirstname', class: 'form-control' %>
     <div class="invalid-feedback">
       <%= l10n("invalid_first_name") %>
     </div>
   </div>
   <div class="col-md-3 mb-2">
-    <label for="inputLastname"><%= l10n('last_name') %> *</label>
+    <label for="inputLastname" class='required'><%= l10n('last_name') %></label>
     <%= f.text_field :last_name, placeholder: l10n('last_name'), required: 'true', id: 'inputLastname', class: 'form-control' %>
     <div class="invalid-feedback">
       <%= l10n("invalid_last_name") %>
     </div>
   </div>
   <div class="col-md-3 mb-2">
-    <label for="inputEmail"><%= l10n('email_address') %> *</label>
+    <label for="inputEmail" class='required'><%= l10n('email_address') %></label>
     <%= f.email_field :email, placeholder: l10n('placeholder_email'), required: 'true', id: 'inputEmail', class: 'form-control' %>
     <div class="invalid-feedback">
       <%= l10n("invalid_email") %>
     </div>
   </div>
   <div class="col-md-3 mb-2">
-    <label for="inputDOB"><%= l10n('broker_agencies.dob') %> *</label>
+    <label for="inputDOB" class='required'><%= l10n('broker_agencies.dob') %></label>
     <%= f.date_field :dob, placeholder: l10n('dob_format'), min: 110.years.ago, max:"9999-12-31", required: true, class: 'form-control', onblur: 'validDob(this)' %>
     <div class="invalid-feedback">
       <%= l10n("invalid_dob") %>
