--- a/app/views/ui-components/bs4/v1/forms/broker/contact_information/_address.html.erb
+++ b/app/views/ui-components/bs4/v1/forms/broker/contact_information/_address.html.erb
@@ -5,7 +5,7 @@
 <div id="address_info">
   <div class="row mb-2">
     <div class="col-md-6 col-sm-6 col-xs-12">
-      <label for="inputAddress1"><%= l10n('address_1') %> *</label>
+      <label for="inputAddress1" class='required'><%= l10n('address_1') %></label>
       <%= f.text_field :address_1, class: "form-control mb-1", placeholder: l10n('address_1_placeholder'), required: true, id: 'inputAddress1' %>
       <div class="invalid-feedback">
         <%= l10n('address.address_1_error') %>
@@ -19,28 +19,28 @@
 
   <div class="row mb-2" data-controller="zip-check">
     <div class="col-md-3 col-sm-12 col-xs-12">
-      <label for="inputCity"><%= l10n("city") %> *</label>
+      <label for="inputCity" class='required'><%= l10n("city") %></label>
       <%= f.text_field :city, class: "form-control mb-1", required: true, placeholder: l10n("city") %>
       <div class="invalid-feedback">
         <%= l10n('address.city_error') %>
       </div>
     </div>
     <div class="col-md-3 col-sm-12 col-xs-12">
-      <label for="inputState"><%= l10n('state') %> *</label>
+      <label for="inputState" class='required'><%= l10n('state') %></label>
       <%= f.select :state, options_for_select(State::NAME_IDS.map(&:last).sort_by { |c| c }, selected: f.object.try(:state)), { include_blank: l10n("select_state") }, class: 'form-control mb-1', id: 'inputState', required: true %>
       <div class="invalid-feedback">
         <%= l10n('address.state_error') %>
       </div>
     </div>
     <div class="col-md-3 col-sm-12 col-xs-12">
-      <label for="inputZip"><%= l10n('zip_code') %> *</label>
+      <label for="inputZip" class='required'><%= l10n('zip_code') %></label>
       <%= f.text_field :zip, id: 'inputZip', class: 'form-control mb-1', minlength: '5', maxlength: '5', required: true, placeholder: '00000' %>
       <div class="invalid-feedback">
         <%= l10n('address.zip_code_error') %>
       </div>
     </div>
     <div class="col-md-3 col-sm-6 col-xs-12">
-      <label for="inputKind"><%= l10n('address_kind') %> *</label>
+      <label for="inputKind" class='required'><%= l10n('address_kind') %></label>
       <% kinds = f.object.office_kind_options; kinds = kinds.rotate if params[:child_index] %>
       <%= f.select :kind, options_for_select(kinds.map { |a| [a.to_s.humanize, a.to_s] }, selected: f.object.try(:kind)), { prompt: l10n("address.address_kind_select") }, class: "form-control", required: true, id: 'kindSelect' %>
       <div class="invalid-feedback">
