mask all ssn fields (#4279)
* complete initial pass on new ssn field reqs

* add slight modification to new family policy method

* add event listener for accessibility

* complete spec for new endpoints

* remove unnecessary changes from enroll system config file

* adds ssn masks to my household section

* bearer failure

* bearer failure

* bearer failure

* fix failing spec in family policy

* remove console.logs

* make env var true on failing spec

* bearer failure

* readd bearer fix

* remove excessive line breaks

* remove unnecessary helper_method in family_members controller

* complete first pass at applicant ssn field masking

* remove ssn display in all admin tables

* making brief switch to update broker permissions

* complete initial pass on new ssn field reqs

* add event listener for accessibility

* remove unnecessary changes from enroll system config file

* adds ssn masks to my household section

* bearer failure

* bearer failure

* bearer failure

* bearer failure

* readd bearer fix

* remove excessive line breaks

* remove unnecessary helper_method in family_members controller

* complete first pass at applicant ssn field masking

* add addtl permissions and update specs

* remove unnecessary line break

* finalize permission details

* complete first iteration of ssn fields

* remove changes for testing drop enrollment members

* remove comment

* reformat explanatory comment

* remove unused attrs from ssn_form_presenter

* update dependent form input

* remove unused id from edit enrollment partial

* plan shopping options page fixes (#4274)

plan shopping options fixes

* dont have secondary modal for dependent table (#4273)

* don't open secondary modal when in comparison modal

* forgot to commit a file

* rubocop

* fix spec by undoing rubocop suggestions

* enrollment submitted logic fix

* more aptc logic

* aptc calculator adjust am

--- a/app/views/datatables/_drop_enrollment_member.html.erb
+++ b/app/views/datatables/_drop_enrollment_member.html.erb
@@ -9,6 +9,8 @@
   });
 </script>
 
+<%= javascript_pack_tag 'effective_table_add_ons' if EnrollRegistry.feature_enabled?(:mask_ssn_ui_fields) %>
+
 <td colspan="90%">
   <% if @hbxs.present? %>
     <% @hbxs.each do |hbx|%>
@@ -32,7 +34,15 @@
             <% person = member.family_member.person%>
             <tr>
               <td><%= person.full_name %></td>
-              <td><%= number_to_obscured_ssn(person.ssn) %></td>
+              <td>
+                <% if EnrollRegistry.feature_enabled?(:mask_ssn_ui_fields) %>
+                  <%= render partial: 'shared/person/admin_ssn_block',
+                    locals: { presenter: organize_ssn_params(person, member.family.id), include_label: false }
+                  %>
+                <% else %>
+                  <%= number_to_obscured_ssn(person.ssn) %>
+                <% end %>
+              </td>
               <td><%= person.dob %></td>
               <td><%= member.hbx_id %></td>
               <td><%= hbx.effective_on %></td>
