--- a/app/views/ui-components/bs4/v1/forms/broker/_staff_registration.html.erb
+++ b/app/views/ui-components/bs4/v1/forms/broker/_staff_registration.html.erb
@@ -24,7 +24,7 @@
   </div>
   <div class="col-md-3 mb-2">
     <label for="inputDOB" class='required'><%= l10n('broker_agencies.dob') %></label>
-    <%= f.date_field :dob, placeholder: l10n('dob_format'), min: 110.years.ago, max:"9999-12-31", required: true, class: 'form-control', onblur: 'validDob(this)' %>
+    <%= f.date_field :dob, placeholder: l10n('dob_format'), min: 110.years.ago, max: 16.years.ago, required: true, class: 'form-control', onblur: 'validDob(this)' %>
     <div class="invalid-feedback">
       <%= l10n("invalid_dob") %>
     </div>
