consisten quote marks

--- a/components/benefit_sponsors/app/views/benefit_sponsors/shared/inboxes/_message_list.html.erb
+++ b/components/benefit_sponsors/app/views/benefit_sponsors/shared/inboxes/_message_list.html.erb
@@ -2,7 +2,7 @@
 <div class="hidden mb-4" id="messageDeleted">
   <div class="alert alert-success d-flex align-items-start">
     <div class="d-flex pl-1">
-      <div class="success-icon icon" alt="<%= l10n("success") %>">&nbsp;</div>
+      <div class="success-icon icon" alt='<%= l10n("success") %>'>&nbsp;</div>
     </div>
     <div class="col mr-auto p-0 align-self-center">
       <%= l10n("broker_agencies.message_deleted") %>
