--- a/app/views/shared/person/ssn/_admin_ssn_field.html.erb
+++ b/app/views/shared/person/ssn/_admin_ssn_field.html.erb
@@ -22,19 +22,6 @@
       class="mask-ssn <%= "ssn-facade-#{presenter.person_id}" %>"
       readonly='true'
     >
-    <%= image_pack_tag "icons/eye-off.svg", 
-      class: "ssn-eye-off ssn-eye-off-#{presenter.person_id}",
-      alt: "view ssn icon",
-      tabindex: 0,
-      remote: true,
-      data: { type: presenter.object_type, id: presenter.person_id, family_id: presenter.family_id, action: "click->person#showSsn" }
-    %>
-    <%= image_pack_tag "icons/eye-on.svg",
-      class: "hidden ssn-eye-on ssn-eye-on-#{presenter.person_id}",
-      alt: "hide ssn icon",
-      tabindex: 0,
-      remote: true,
-      data: { id: presenter.person_id, action: "click->person#hideSsn" }
-    %>
+    <%= render partial: 'shared/person/ssn/show_hide_ssn_buttons', locals: { presenter: presenter } %>
   </div>
 <% end %>
